--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <canvas></canvas>
     <input id="line-width" type="range" min="1" max="10" value="5" step="0.1"/>
     <input type="color" id="color"/>
-    <div
+    <div>
+      <div
       class="color-option"
       style="background-color: #1abc9c"
       data-color="#1abc9c"
@@ -71,6 +72,8 @@
       style="background-color: #e67e22"
       data-color="#e67e22"
     ></div>
+    </div>
+    <button id="mode-btn">Fill</button>
     <script src="app.js"></script>
 </body>
 </html>
