--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meme Maker</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-    <canvas></canvas>
-    <input id="line-width" type="range" min="1" max="10" value="5" step="0.1"/>
-    <input type="color" id="color"/>
-    <div>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="color-options">
+      <input type="color" id="color" />
       <div
-      class="color-option"
-      style="background-color: #1abc9c"
-      data-color="#1abc9c"
+        class="color-option"
+        style="background-color: #1abc9c"
+        data-color="#1abc9c"
       ></div>
       <div
         class="color-option"
@@ -59,11 +57,6 @@
       ></div>
       <div
         class="color-option"
-        style="background-color: #bdc3c7"
-        data-color="#bdc3c7"
-      ></div>
-      <div
-        class="color-option"
         style="background-color: #2ecc71"
         data-color="#2ecc71"
       ></div>
@@ -73,12 +66,26 @@
         data-color="#e67e22"
       ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="destroy-btn">Destoroy</button>
-    <button id="eraser-btn">Erase</button>
-    <input type="file" accept="image/*" id="file"/>
-    <input type="text" placeholder="Write and then double click" id="text"/>
-    <button id="save">Save image</button>
+    <canvas></canvas>
+    <div class="btns">
+      <input
+        id="line-width"
+        type="range"
+        min="1"
+        max="10"
+        value="5"
+        step="0.1"
+      />
+      <button id="mode-btn">🩸 Fill</button>
+      <button id="destroy-btn">💣 Destroy</button>
+      <button id="eraser-btn">❌ Erase</button>
+      <label for="file">
+        💅🏻 Add Photo
+        <input type="file" accept="image/*" id="file"
+      /></label>
+      <input type="text" id="text" placeholder="Add text here... :)" />
+      <button id="save">🖼 Save image</button>
+    </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
